Swagger Fix
