# swagger.json
@@ -5,7 +5,7 @@
     "description": "API documentation for CSE341 project",
     "version": "1.0.0"
   },
-  "host": "cse341-9a48.onrender.com/",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http",
@@ -153,8 +153,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
           },
           "500": {
             "description": "Internal Server Error"
